@@ -1,2 +1,3 @@
 Add missing colon in closes line.
 Fixed-Lintian-Tags: possible-missing-colon-in-closes
+Certainty: likely
